--- a/index.html
+++ b/index.html
@@ -5,10 +5,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+
     <title>Øvelser</title>
 </head>
 
 <body>
+    <header>
+
+    </header>
+    <main>
+        <div id="billeder">
+            <div id="knapElement1">
+                <img src="billeder/snaps.png" alt="snaps">
+            </div>
+            <div id="knapElement2">
+                <img src="billeder/fanta.png" alt="fanta">
+            </div>
+            <div id="knapElement3">
+                <img src="billeder/cola.png" alt="cola">
+            </div>
+            <div id="knapElement4">
+                <img src="billeder/øl.png" alt="øl">
+            </div>
+        </div>
+    </main>
+    <footer>
+
+    </footer>
+    <script src="script.js"></script>
 
 </body>
 
