--- a/array/array.html
+++ b/array/array.html
@@ -8,9 +8,12 @@
     <title>array</title>
 </head>
 
-<body id="display">
+<body>
     <h1>Playliste</h1>
-    <ul id=”playlist”></ul>
+    <ul id="display">
+        <li id=”playlist”></li>
+
+    </ul>
     <script src="script.js"></script>
 </body>
 
