--- a/objekt/superhelt.html
+++ b/objekt/superhelt.html
@@ -9,7 +9,16 @@
 </head>
 
 <body>
-
+    <main>
+        <article id="superhelte1">
+            <img src="" alt="">
+            <h1>navn</h1>
+            <div>styrke</div>
+            <p>yndlingsfarve</p>
+            <p>hårfarve</p>
+        </article>
+    </main>
+    <script src="script.js"></script>
 </body>
 
 </html>
